# crispy-daisyui

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pages.yml  publish.yml
crispy_daisyui/: daisyui.py  layout.py
crispy_daisyui/templates/daisyui/: display_form.html  errors_formset.html  field.html  inputs.html  table_inline_formset.html  uni_form.html  uni_formset.html  whole_uni_form.html  whole_uni_formset.html
crispy_daisyui/templates/daisyui/layout/: button.html  checkbox.html  checkboxselectmultiple.html  field_with_buttons.html  help_text_and_errors.html  inline_field.html  prepended_appended_text.html  radioselect.html  radioselect_inline.html  select.html  select_option.html  toggle.html
crispy_daisyui/templatetags/: daisyui_field.py  daisyui_filters.py
example/: Makefile  package-lock.json  requirements.txt  tailwind.config.js
example/showroom/: asgi.py  forms.py  settings.py  urls.py  views.py
example/showroom/management/commands/: build.py
example/static/: input.css  output.css
example/templates/: base.html  showroom.html
showroom/: Makefile  manage.py  package-lock.json  package.json  requirements.txt
showroom/showroom/: forms.py  settings.py  views.py  wsgi.py
showroom/static/: output.css
showroom/templates/: base.html  showroom.html
